# algotech-lss-django

./: .env.prod  .gitignore  .gitlab-ci.yml  .lss_reload.sh  .lss_start.sh  .lss_stop.sh  26531E382B1F9BB8A597A33FB4D74886.txt  README.md  Till End OCT2022.xlsx  campaign_remind.sh  comment_capture.Dockerfile  config_example.py  db.sqlite3  dump.rdb  liveshowseller-400012-0ad472937996.json  liveshowseller-b4308e2f9dc6.json  manage_dev.py  manage_local.py  manage_prod_local.py  manage_sl.py  manage_staging.py  manage_test.py  package-lock.json  package.json  pyproject copy.toml  pyproject.toml  pytest.ini  renew_facebook_cookies.sh  requirement.txt  requirements.txt  server.sh
.dumps/: LiveShowSeller (read only pls).postman_collection.json
.dumps/legacy_lss/: README.md
api/: admin.py  routing.py  urls.py
api/code/: code.py  code_manager.py  password_code_manager.py  subscription_code_manager.py
api/migrations/: 0001_initial.py  0002_auto_20211027_1725.py  0002_auto_20211116_1932.py  0002_auto_20220104_0605.py  0002_auto_20220407_1156.py  0002_auto_20220414_0502.py  0002_auto_20221129_1704.py  0002_auto_20221201_0342.py  0002_auto_20221206_0911.py  0002_campaign_ordering_start_at.py  0002_campaign_user_subscription.py  0002_sample.py  0002_user_auth_user.py  0003_alter_usersubscription_meta_logistic.py  0003_auto_20211119_2048.py  0003_auto_20220511_0542.py  0003_auto_20221208_0335.py  0003_buyerpoint_order.py  0003_campaign_ordering_only_activated_products.py  0003_remove_campaigncomment_commented_at.py  0003_remove_usersubscription_root_users.py  0003_remove_youtubechannel_channel_id.py  0003_sample_json.py  0004_auto_20211119_2055.py  (+213 more)
api/models/: order.py  (+11 more)
api_v2/: urls.py
automation/: __init__.py
backend/: urls.py  views.py
business_policy/: __init__.py  delivery.py  marketing_plan.py  payment.py  subscription.py  subscription_plan.py
chat_bot/: urls.py
cookies/: facebook_cookie.pkl
cron/: abandon_order_product_recycle.py  adjust_wallet_with_expired_points.py  apps.py  cron.py  uncheckout_cart_reminder.py
database/: __init__.py
facebook_bot/: apps.py
factory/: __init__.py  order_export.py  point_discount.py
frontend/: package-lock.json  package.json  vue.config.js
jupyter_files/: UncheckoutCartReminderCronJob.ipynb  Untitled.ipynb  buyer page.ipynb  campaign reminder test.ipynb  database_modifty.ipynb  django_initializer.py  django_initializer_sl.py  facebook shared post crawler.ipynb  new sales report.ipynb  order analysis.ipynb  sales report.ipynb  salse report.ipynb
lib/: __init__.py
lss/: asgi.py  db_router.py  routing.py  settings.py  settings_dev.py  settings_example.py  settings_local.py  settings_prod_local.py  settings_social_lab.py  settings_staging.py  settings_test.py  urls.py  wsgi.py
mail/: models.py
note/: mongodb.md
plugins/: __init__.py
service/: __init__.py  _rest_api_json_caller.py
shell_script/: deploy-app.sh  deploy-backend.sh  deploy-frontend.sh  deploy-worker.sh  kill-if-hung.sh  renew_facebook_cookies.sh  runcrons.sh  start_test_queue_worker.sh
static/: index.html
supervisor_conf/: campaign_worker.conf  comment_worker.conf  run_node.conf
templates/: email_cart_checkout.html  email_notify_wishlist.html  email_order_confirm.html  email_reset_password_link.html  email_verification_code.html  facebook_login_example.html  forgot_password.html  google_test_login.html  iframe_facebook.html  ipg_test.html  lss_enigma_entry.html  lss_entry.html  register_activation.html  register_cc.html  register_confirmation.html  register_freetrial.html  reset_password_success_email.html
(+682 files in other folders)
