[tool.poetry]
name = "LiveShowSeller"
version = "0.1.0"
description = ""
authors = ["Ian Liu <ipuppyian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
requests = "^2.26.0"
PyMySQL = "^1.0.2"
Django = "^3.2.8"
gunicorn = "^20.1.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
django-cron = "^0.5.1"
django-filter = "^21.1"
djongo = "^1.3.6"
dnspython = "^2.1.0"
django-cors-headers = "^3.10.0"
django-storages = {extras = ["google"], version = "^1.12.3"}
google-cloud-storage = "^1.43.0"
XlsxWriter = "^3.0.2"
google-cloud-monitoring = "^2.8.0"
openpyxl = "^3.0.9"
rq = "^1.10.1"
google-cloud-logging = "^2.7.0"
paypalrestsdk = "^1.13.1"
rq-dashboard = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
