[tool.poetry]
name = "liveshowseller"
version = "0.1.0"
description = ""
authors = ["lin <yihsuehlin@accoladeglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"
requests = "^2.31.0"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"
djongo = "^1.3.6"
pymongo = "^4.4.1"
django-cors-headers = "^4.2.0"
django-vite = "^2.1.3"
numpy = "^1.25.2"
xlsxwriter = "^3.1.2"
boto3 = "^1.28.17"
pika = "^1.3.2"
django-storages = "^1.13.2"
django-dotenv = "^1.4.2"
cryptography = "^41.0.2"
google-cloud-storage = "^2.10.0"
django-cron = "^0.6.0"
prettytable = "^3.8.0"
sib-api-v3-sdk = "^7.6.0"
attr = "^0.3.2"
hubspot = "^0.1.14.dev0"
simplejson = "^3.19.1"
delorean = "^1.0.0"
rq = "^1.15.1"
channels = "^4.0.0"
stripe = "^5.5.0"
paypalrestsdk = "^1.13.1"
pendulum = "^2.1.2"
pydantic = "^2.1.1"
pottery = "^3.0.0"
google-cloud-logging = "^3.6.0"
google-cloud-monitoring = "^2.15.1"
arrow = "^1.2.3"
openpyxl = "^3.1.2"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
